# RESTAPI-MCDR

./: .gitignore  AGENTS.md  README.md  gitrepo.toml  mcdreforged.plugin.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
doc/: CHANGELOG.md  RELEASE.md
rest_api/: __init__.py  config.py  data.py
